# sansete

./: .gitignore  README.md
backend/: .env.example  Cargo.toml
backend/migrations/: 0001_init.sql  0002_order_geolocation.sql  0002_retiradas_and_shipping.sql
backend/src/: auth.rs  error.rs  main.rs  mercadopago.rs  models.rs  neighborhoods.rs  orders_common.rs  seed.rs  state.rs  status_flow.rs  storage.rs  whatsapp.rs
backend/src/routes/: admin.rs  auth.rs  mod.rs  motoboy.rs  public.rs  webhooks.rs
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: WhatsAppFab.tsx
frontend/src/components/layout/: AdminLayout.tsx  MotoboyLayout.tsx  SiteHeader.tsx
frontend/src/components/ui/: Autocomplete.tsx  Badge.tsx  Button.tsx  Card.tsx  Logo.tsx  WhatsAppConnection.tsx  WhatsAppLink.tsx
frontend/src/lib/: api.ts  apiError.ts  localApi.ts  localData.ts  supabaseClient.ts  supabasePublicApi.ts  types.ts
frontend/src/pages/: Carrinho.tsx  Catalogo.tsx  Checkout.tsx  Consultar.tsx  Landing.tsx  Pagamento.tsx  ProdutoDetalhe.tsx
frontend/src/pages/admin/: AdminFinanceiro.tsx  AdminFrete.tsx  AdminLogin.tsx  AdminMotoboys.tsx  AdminPedidos.tsx  AdminProdutos.tsx  AdminSenha.tsx
frontend/src/pages/motoboy/: MotoboyConta.tsx  MotoboyFila.tsx  MotoboyFinanceiro.tsx  MotoboyLogin.tsx
frontend/src/store/: adminAuth.ts  cart.ts  customer.ts  motoboyAuth.ts
supabase/: sunset_admin_auth.sql  sunset_motoboy_counts.sql  sunset_motoboy_financeiro.sql  sunset_motoboy_payout.sql  sunset_order_geolocation.sql  sunset_products_storage.sql  sunset_public_rls_and_rpc.sql
whatsapp-gateway/: README.md  index.js  package-lock.json  package.json
