[package]
name = "sonset_backend"
version = "0.1.0"
edition = "2021"
# Railway's Railpack builder reads this field to pick which Rust toolchain to
# install (it ignores rust-toolchain.toml). Cargo.lock is committed (pinned
# dependency versions), and the highest MSRV among those pinned deps is 1.88
# (image, time). Keep this in sync with `cargo build` MSRV errors if
# dependencies are ever updated.
rust-version = "1.88"

[dependencies]
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9"
argon2 = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.8"
qrcode = "0.14"
# Only PNG encoding is used (see mercadopago.rs) — default features pull in
# slow-to-compile codecs (AVIF/rav1e, EXR...) we never use.
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"
anyhow = "1"
